<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333232"
    android:backgroundTint="#333232"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/t_Registro"
        android:layout_width="150dp"
        android:layout_height="53dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="107dp"
        android:layout_weight="1"
        android:fontFamily="@font/amaranth_bold_italic"
        android:text="@string/campos"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#E4E4E4"
        android:textSize="36sp"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="167dp"
        android:layout_height="167dp"
        android:layout_marginStart="98dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:srcCompat="@drawable/pngegg" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="24dp"
        android:layout_height="800dp"
        android:background="#32303A"
        android:backgroundTint="#F8F8F8"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="24dp"
        android:layout_height="808dp"
        android:background="#32303A"
        android:backgroundTint="#F8F8F8"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </LinearLayout>

    <Button
        android:id="@+id/B_VerZona"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginStart="115dp"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="11dp"
        android:onClick="AbrirMapa"
        android:text="@string/ver_zona_de_riesgo"
        app:layout_constraintBottom_toTopOf="@+id/B_EvaluarRiesgo"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/B_EvaluarRiesgo"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="9dp"
        android:text="@string/evaluar_riesgo"
        app:layout_constraintBottom_toTopOf="@+id/B_PedirCita"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3" />

    <Button
        android:id="@+id/B_PedirCita"
        android:layout_width="132dp"
        android:layout_height="58dp"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="118dp"
        android:layout_marginBottom="104dp"
        android:text="@string/pedir_cita"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout4"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3" />

</androidx.constraintlayout.widget.ConstraintLayout>